new projects added.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
     <!-- Header Design -->
     <header class="header">
@@ -94,7 +95,7 @@
           websites. I have worked on a variety of web development projects,
           ranging from personal blogs to e-commerce platforms.
         </p>
-        <a href="#" class="btn">Read more</a>
+        <a href="https://linkedin.com/in/shamik-raza-530496243" class="btn">Read more</a>
       </div>
     </section>
 
@@ -160,11 +161,11 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="MyGPT.jpeg" alt="image" />
+          <img src="tictactow.png" alt="image" />
           <div class="portfolio-layer">
-            <h4>My gpt App</h4>
-            <p>It is a Chat gpt application built using java.</p>
-            <a href="https://github.com/shamik-16/Chat-gpt" target="_blank">
+            <h4>Tic Tac Toe Game</h4>
+            <p>It is a tic tac toe game built using HTML, CSS and JavaScript.</p>
+            <a href="https://github.com/shamik-16/Tic-Tac-Toe" target="_blank">
               <i class="fa-solid fa-up-right-from-square"></i>
             </a>
           </div>
@@ -182,35 +183,27 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="mymeme.jpeg" alt="image" />
+          <img src="MyGPT.jpeg" alt="image" />
           <div class="portfolio-layer">
-            <h4>My Memes App</h4>
-            <p>
-              Android app that fetches cool memes from the Reddit random meme
-              API.
-            </p>
-            <a
-              href="https://github.com/shamik-16/Meme-Share-app"
-              target="_blank"
-            >
+            <h4>My gpt App</h4>
+            <p>It is a Chat gpt application built using java.</p>
+            <a href="https://github.com/shamik-16/Chat-gpt" target="_blank">
               <i class="fa-solid fa-up-right-from-square"></i>
             </a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="tictactoe.jpeg" alt="image" />
+          <img src="wally.jpeg" alt="image" />
           <div class="portfolio-layer">
-            <h4>Tic Tac Toe</h4>
-            <p>It is a simple tic tac toe game app.</p>
-            <a
-              href="https://github.com/shamik-16/Tic-Tac-Toe-Game"
-              target="_blank"
-            >
+            <h4>Wally App</h4>
+            <p>It is a wallpaper app that fetches data from the pexels api.</p>
+            <a href="https://github.com/shamik-16/Wally" target="_blank">
               <i class="fa-solid fa-up-right-from-square"></i>
             </a>
           </div>
         </div>
+
       </div>
     </section>
 
