--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           ></a>
         </div>
         <a
-          href="Shamik_Resume.pdf"
+          href="Resume.pdf"
           download="resume"
           target="_blank"
           class="btn"
